TcpListener server and SyncQueues skeleton done

--- a/Core.Networking/Core.Networking.fsproj
+++ b/Core.Networking/Core.Networking.fsproj
@@ -45,6 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="FileSyncHandlerMessageQueue.fs" />
+    <Compile Include="TCPListenerServer.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
