--- a/Tests.UnitTests/Tests.UnitTests.fsproj
+++ b/Tests.UnitTests/Tests.UnitTests.fsproj
@@ -35,6 +35,7 @@
     <DocumentationFile>bin\Release\Tests.UnitTests.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
@@ -45,6 +46,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="TestCategories.fs" />
+    <Compile Include="TCPListenerServerTests.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Networking\Core.Networking.fsproj">
+      <Name>Core.Networking</Name>
+      <Project>{4be0a897-f696-4927-b45b-d252471c4ec3}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
