--- a/Core.Networking/Core.Networking.fsproj
+++ b/Core.Networking/Core.Networking.fsproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="FileSyncHandlerMessageQueue.fs" />
+    <Compile Include="ConnectionMessageQueue.fs" />
     <Compile Include="TCPListenerServer.fs" />
   </ItemGroup>
   <PropertyGroup>
