--- a/Tests.UnitTests/Tests.UnitTests.fsproj
+++ b/Tests.UnitTests/Tests.UnitTests.fsproj
@@ -48,6 +48,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="TestCategories.fs" />
     <Compile Include="TCPListenerServerTests.fs" />
+    <Compile Include="ConnectionMessageQueueTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.Networking\Core.Networking.fsproj">
