--- a/Tests.UnitTests/Tests.UnitTests.fsproj
+++ b/Tests.UnitTests/Tests.UnitTests.fsproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="TestCategories.fs" />
+    <Compile Include="TestBase.fs" />
     <Compile Include="TCPListenerServerTests.fs" />
     <Compile Include="ConnectionMessageQueueTests.fs" />
   </ItemGroup>
