- Added common file for Core.Networking and Tests.UnitTests, containing common function used by both projects - Added a .testsettings file for running tests from VS - Implemented another test for ConnectionMessageQueue - Added better exception reporting at 2 places in ConnectionMessageQueue

--- a/Core.Networking/Core.Networking.fsproj
+++ b/Core.Networking/Core.Networking.fsproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="NetworkingCommon.fs" />
     <Compile Include="ConnectionMessageQueue.fs" />
     <Compile Include="TCPListenerServer.fs" />
   </ItemGroup>
