- Added a test for ConnectionMessageQueue - More robust networking protocol, still some work to do though - Renamed TCPListenerServer to ClientDiscoveryServer - Created dedicated file for network protocol - 4 Unit tests are failing, will fix soon

--- a/Core.Networking/Core.Networking.fsproj
+++ b/Core.Networking/Core.Networking.fsproj
@@ -45,9 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Protocol.fs" />
     <Compile Include="NetworkingCommon.fs" />
     <Compile Include="ConnectionMessageQueue.fs" />
-    <Compile Include="TCPListenerServer.fs" />
+    <Compile Include="ClientDiscoveryServer.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
