- Work on SettingsView UI - Added 2 common validation rules in Helper project - Implemented saving and cancelling of app settings (could be done better without the enum)

--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -32,8 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,10 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonConverters\BaseConverter.cs" />
+    <Compile Include="CommonValidationRules\IntMinMaxRule.cs" />
+    <Compile Include="CommonValidationRules\UIntMinMaxRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CommonConverters\" />
     <Folder Include="UserControls\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
