- Created error template for validation rule (small pop up like control that prints error message) - Validation of the setting is now done while the user writes and not on focus lost from the textbox/other control - Should probably move the validation template somewhere else since it can be reused...

--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CommonAdorners\WatermarkAdorner.cs" />
     <Compile Include="CommonBehaviors\WatermarkBehavior.cs" />
     <Compile Include="CommonConverters\BaseConverter.cs" />
+    <Compile Include="CommonConverters\MultipleBooleanOrConverter.cs" />
     <Compile Include="CommonValidationRules\IntMinMaxRule.cs" />
     <Compile Include="CommonValidationRules\UIntMinMaxRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
